--- a/SDL_FreeWAV.mediawiki
+++ b/SDL_FreeWAV.mediawiki
@@ -13,14 +13,14 @@ void SDL_FreeWAV(Uint8* audio_buf)
 == Function Parameters ==
 {|
 |'''audio_buf'''
-|,,a pointer to ,,the buffer created by [[SDL_LoadWAV]]() or [[SDL_LoadWAV_RW]]()
+|a pointer to the buffer created by [[SDL_LoadWAV]]() or [[SDL_LoadWAV_RW]]()
 |}
 
 == Code Examples ==
 <<Include(SDL_LoadWAV, , , from="== Code Examples ==", to="== Remarks ==")>>
 
 == Remarks ==
-*<br/>After a WAVE file has been opened with [[SDL_LoadWAV]]() or [[SDL_LoadWAV_RW]]() its data can eventually be freed with [[SDL_FreeWAV]]().<br/>*
+After a WAVE file has been opened with [[SDL_LoadWAV]]() or [[SDL_LoadWAV_RW]]() its data can eventually be freed with [[SDL_FreeWAV]](). It is safe to call this function with a NULL pointer.
 
 == Related Functions ==
 :[[SDL_LoadWAV]]
