--- a/SDL_GetAudioDriver.mediawiki
+++ b/SDL_GetAudioDriver.mediawiki
@@ -16,20 +16,20 @@ const char* SDL_GetAudioDriver(int index)
 
 
 == Return Value ==
-Returns the name of the audio driver at the requested index.
-
-<<Color2(green,What happens if it fails or there is no driver?  Empty ""?)>>
+Returns the name of the audio driver at the requested index, or NULL if an invalid index was specified.
 
 == Code Examples ==
 ```c++
 int i;
-
 for ( i = 0; i < SDL_GetNumAudioDrivers(); ++i ) {
     printf("Audio driver %d: %s\n", i, SDL_GetAudioDriver(i));
 }
 ```
+
 == Remarks ==
-The list of audio drivers is given in the order that they are normally initialized by default.
+The list of audio drivers is given in the order that they are normally initialized by default; the drivers that seem more reasonable to choose first (as far as the SDL developers believe) are earlier in the list.
+
+The names of drivers are all simple, low-ASCII identifiers, like "alsa", "coreaudio" or "xaudio2". These never have Unicode characters, and are not meant to be proper names.
 
 == Related Functions ==
 : [[SDL_GetNumAudioDrivers]]
