--- a/SDL_GetNumAudioDrivers.mediawiki
+++ b/SDL_GetNumAudioDrivers.mediawiki
@@ -22,7 +22,7 @@ for ( i = 0; i < SDL_GetNumAudioDrivers(); ++i ) {
 ```
 
 == Remarks ==
-This function returns a hardcoded number. This never returns a negative value; if there are no drivers compiled into this build of SDL, this function returns zero. The presence of a driver in this list does not mean it will function, it just means SDL is capable of interacting with that interface. For example, a build of SDL might have PulseAudio support, but if there's no PulseAudio server available, SDL's PulseAudio driver would fail if used.
+This function returns a hardcoded number. This never returns a negative value; if there are no drivers compiled into this build of SDL, this function returns zero. The presence of a driver in this list does not mean it will function, it just means SDL is capable of interacting with that interface. For example, a build of SDL might have esound support, but if there's no esound server available, SDL's esound driver would fail if used.
 
 By default, SDL tries all drivers, in its preferred order, until one is found to be usable.
 
