--- a/CategoryIO.mediawiki
+++ b/CategoryIO.mediawiki
@@ -15,8 +15,8 @@ This category contains functions for handling the general interface for SDL to r
 <!-- #== Enumerations == -->
 <!-- #<<FullSearchCached(category:CategoryEnum CategoryIO -SGEnumerations)>> -->
 
-<!-- #== Structures == -->
-<!-- #<<FullSearchCached(category:CategoryStruct CategoryIO -SGStructures)>> -->
+== Structures ==
+<<FullSearchCached(category:CategoryStruct CategoryIO -SGStructures)>>
 
 == Functions ==
 <<FullSearchCached(category:CategoryIO -CategoryEnum -CategoryStruct -SGFunctions)>>
