--- a/SDL_TriggerBreakpoint.mediawiki
+++ b/SDL_TriggerBreakpoint.mediawiki
@@ -16,7 +16,9 @@ You can add your code example here
 ```
 
 == Remarks ==
-If the program is running under a debugger this function will trigger a breakpoint.  It is typically used temporarily during debugging or with other error handling.
+If the program is running under a debugger this function will trigger a breakpoint.  It is typically used temporarily during debugging or with other error handling. Note that if a debugger isn't running, on some platforms this can terminate your application.
+
+This isn't actually a function, but rather a macro. The intention is that the debugger will stop on exactly this line of code instead of somewhere inside the SDL library. As such, [[CategoryAssertions|the assertion facility]] uses this so that the debugger stops on the exact line of code where an [[SDL_assert]] failed.
 
 ----
 [[CategoryAPI]], [[CategoryAssertions]]
