--- a/SDL_AddTimer.mediawiki
+++ b/SDL_AddTimer.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_AddTimer =
-Use this function to add a new timer to the pool of timers already running.
+Use this function to set up a callback function to be run on a separate thread after the specified number of milliseconds has elapsed.
 
 
 == Syntax ==
@@ -26,7 +25,7 @@ SDL_TimerID SDL_AddTimer(Uint32            interval,
 |}
 
 == Return Value ==
-Returns a timer ID or NULL if an error occurs,,; call [[SDL_GetError]]() for more information.,,
+Returns a timer ID or 0 if an error occurs; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 *
@@ -44,7 +43,7 @@ Uint32 my_callbackfunc(Uint32 interval, void *param)
     SDL_UserEvent userevent;
 
     /* In this example, our callback pushes an SDL_USEREVENT event
-    into the queue, and causes ourself to be called again at the
+    into the queue, and causes our callback to be called again at the
     same interval: */
 
     userevent.type = SDL_USEREVENT;
@@ -64,11 +63,22 @@ Note that it is possible to avoid the multithreading problems with SDL timers by
 /* with the same code as before: */
 Uint32 my_callbackfunc(Uint32 interval, void *param)
 {
-    /* ... */
+    SDL_Event event;
+    SDL_UserEvent userevent;
+
+    /* In this example, our callback pushes a function
+    into the queue, and causes our callback to be called again at the
+    same interval: */
+
+    userevent.type = SDL_USEREVENT;
+    userevent.code = 0;
     userevent.data1 = &my_function;
     userevent.data2 = param;
 
-    /* ... */
+    event.type = SDL_USEREVENT;
+    event.user = userevent;
+
+    SDL_PushEvent(&event);
     return(interval);
 }
 
@@ -91,37 +101,16 @@ while (SDL_PollEvent (&event))
 *
 
 == Remarks ==
-*<br/>
-[[SDL_AddTimer]]() adds a callback function to be run after the specified number of milliseconds has elapsed.
 
-<span id="callback"></span>
-The function prototype for '''callback''' is: 
- ```
-Uint32 SDL_TimerCallback(Uint32 interval, 
-                         void*  param)
-```
-: where its parameters are:
- ||<code>interval</code>||what was passed as '''interval''' to [[SDL_AddTimer]]()||
- ||<code>param</code>||what was passed as '''param''' to [[SDL_AddTimer]]()||
+If you use this function, you must pass SDL_INIT_TIMER to [[SDL_Init]]().
 
-: The callback function is passed the current timer interval ''and the user supplied parameter from the [[SDL_AddTimer]]() call'' and returns the next timer interval. If the returned value ''from the callback'' is the same as the one passed in, the ''timer'' continues ''at the same rate''. If the ''returned value from the callback is'' 0, the ''timer'' is canceled.
+The callback function is passed the current timer interval and the user supplied parameter from the [[SDL_AddTimer]]() call and returns the next timer interval. If the returned value from the callback is 0, the timer is canceled.
 
-: <<Color2(green,The next paragraph is from the current header and seems to be redundant with the above except for the parts in italics.  Which is the better version?)>>
-
-: The callback function is passed the current timer interval and returns the next timer interval.  If the returned value is the same as the one passed in, the ''periodic alarm'' continues, ''otherwise a new alarm is scheduled''.  If the ''callback returns'' 0, the ''periodic alarm'' is canceled.
-
-,,Another way,, ^To cancel a currently-running timer^ ,,is by calling,, ^call^ [[SDL_RemoveTimer]]() with the timer's ID (which was returned from [[SDL_AddTimer]]()).
-
-The granularity of the timer ^used by '''interval'''^ is platform-dependent, but you should count on it being at least 10 ms as this is the most common number. This means that if you request a 16 ms timer, your callback will run approximately 20 ms later on an unloaded system. If you wanted to set a flag signaling a frame update at 30 frames per second (every 33 ms), you might set a timer for 30 ms (see [[#Code Example|Code Example]]). 
-
-The timer callback function may run in a different thread than your main program, and so shouldn't call any functions from within it,,self,,. However, you may always call [[SDL_PushEvent]]().
-
-If you use this function, you need to pass SDL_INIT_TIMER to SDL_Init. <br/>*
+The callback is run on a separate thread.  See the code examples for a method of processing the timer callbacks on the main thread if that's desired.
 
 
 == Related Functions ==
-:[[SDL_PushEvent]] *
-:[[SDL_RemoveTimer]] *
+:[[SDL_RemoveTimer]]
 
 ----
 [[CategoryAPI]], [[CategoryTimer]]
