--- a/SDL_Delay.mediawiki
+++ b/SDL_Delay.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_Delay =
 Use this function to wait a specified number of milliseconds before returning.
@@ -14,7 +13,7 @@ void SDL_Delay(Uint32 ms)
 == Function Parameters ==
 {|
 |'''ms'''
-|the number of milliseconds to delay (32-bit)
+|the number of milliseconds to delay
 |}
 
 == Code Examples ==
@@ -23,10 +22,8 @@ You can add your code example here
 ```
 
 == Remarks ==
-*<br/>This function waits a specified number of milliseconds before returning. It waits at least the specified time, but possibly longer due to OS scheduling. The delay granularity is at least 10 ms. Some platforms have shorter clock ticks but this is the most common.<br/>*
 
-== Related Functions ==
-:[[SDL_AddTimer]] *
+This function waits a specified number of milliseconds before returning. It waits at least the specified time, but possibly longer due to OS scheduling.
 
 ----
 [[CategoryAPI]], [[CategoryTimer]]
