--- a/SDL_ReadBE16.mediawiki
+++ b/SDL_ReadBE16.mediawiki
@@ -1,11 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_ReadBE16 =
-Use this function to read an item of the specified endianness and return in native format.
-
-<<Color2(green,This is the generalized description from the header.  Should it be adjusted to be specific for each function for the wiki?  ie: Use this function to read an item of big-endian format and return in native format.)>>
+Use this function to read 16 bits of bigendian data from an [[SDL_RWops]] and return in native format.
 
 
 == Syntax ==
@@ -16,11 +13,11 @@ Uint16 SDL_ReadBE16(SDL_RWops* src)
 == Function Parameters ==
 {|
 |'''src'''
-|^the source of the big-endian data to be read^ ???
+|the stream from which to read data
 |}
 
 == Return Value ==
-^Returns a native 16-bit value equivalent to the big-endian value.^ ???
+Returns 16-bits of data in the native byte order of the platform.
 
 == Code Examples ==
 ```c++
@@ -28,7 +25,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+SDL byteswaps the data only if necessary, so the data returned will be in the native byte order.
 
 == Related Functions ==
 :[[SDL_ReadLE16]]
