--- a/SDL_ReadBE16.mediawiki
+++ b/SDL_ReadBE16.mediawiki
@@ -17,7 +17,7 @@ Uint16 SDL_ReadBE16(SDL_RWops* src)
 |}
 
 == Return Value ==
-Returns 16-bits of data in the native byte order of the platform.
+Returns 16 bits of data in the native byte order of the platform.
 
 == Code Examples ==
 ```c++
