--- a/SDL_ReadBE32.mediawiki
+++ b/SDL_ReadBE32.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_ReadBE32 =
-Use this function to read 32 bits of bigendian data from an [[SDL_RWops]] and return in native format.
+Use this function to read 32 bits of big-endian data from an [[SDL_RWops]] and return in native format.
 
 
 == Syntax ==
