--- a/SDL_RWread.mediawiki
+++ b/SDL_RWread.mediawiki
@@ -1,9 +1,8 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_RWread =
-Use this function to read from a data source ''-or-'' *call the function pointed to by an SDL_RWops structure's read member.*
+Use this function to read from a data source.
 
 
 == Syntax ==
@@ -17,70 +16,40 @@ size_t SDL_RWread(struct SDL_RWops* context,
 == Function Parameters ==
 {|
 |'''context'''
-|,,a pointer to ,,an SDL_RWops structure ^containing the read function^???
+|a pointer to an SDL_RWops structure
 |-
 |'''ptr'''
-|*a pointer to an area of memory to read data into*
+|a pointer to a buffer to read data into
 |-
 |'''size'''
-|*the size of each block of memory to read*
+|the size of each object to read, in bytes
 |-
 |'''maxnum'''
-|*the maximum number of memory blocks to read (it may read less)*
+|the maximum number of objects to be read
 |}
-
-<<Color2(green,I think '''ptr''' is an exception to the 'pointer rule'.)>>
 
 == Return Value ==
 Returns the number of objects read, or 0 at error or end of file; call [[SDL_GetError]]() for more information.
 
-''-or-''
-
-*Returns the number of memory blocks read, or -1 if the read failed*; call [[SDL_GetError]]() for more information.
-
 == Code Examples ==
-*
 ```c++
-#include <stdio.h>
-#include "SDL_rwops.h"
-
-int main(int argc, char *argv[])
-{
-  int blocks;
-  char buf[256];
-  SDL_RWops *rw=SDL_RWFromFile("file.bin","rb");
-  if(rw==NULL)
-  {
-    fprintf(stderr,"Couldn't open file.bin\n");
-    return(1);
-  }
-
-  blocks=SDL_RWread(rw,buf,16,256/16);
+SDL_RWops *rw = SDL_RWFromFile("test.bin","r");
+if (rw != NULL) {
+  extern Uint8 buf[256];
+  SDL_RWread(rw, buf, sizeof (buf));
   SDL_RWclose(rw);
-  if(blocks<0)
-  {
-    fprintf(stderr,"Couldn't read from file.bin\n");
-    return(2);
-  }
-
-  fprintf(stderr,"Read %d 16-byte blocks\n",blocks);
-  return(0);
 }
 ```
-*
 
 == Remarks ==
-*<br/>This is not a built in function. This is a C macro that calls whatever function happens to be in the 'read' member of the SDL_RWops structure.<br/>*
+This function reads up to '''maxnum''' objects each of size '''size''' from the data source to the area pointed at by '''ptr'''. This function may read less objects than requested. It will return zero when there has been an error or the data stream is completely read.
 
-[[SDL_RWread]] reads up to '''maxnum''' objects each of size '''size''' from the data source to the area pointed at by '''ptr'''.  <<Color2(green,Should SDL_RWread have () like a function even though it's a macro?)>>
+SDL_RWread is actually a macro that calls the SDL_RWops's '''read''' method appropriately, to simplify application development.
 
 == Related Functions ==
-:[[SDL_RWclose]] (Macro) *
-:[[SDL_RWFromFile]] *
-:[[SDL_RWseek]](Macro) *
-:[[SDL_RWwrite]] (Macro) *
-
-<<Color2(green,Should the current read and write functions (not macros) be listed?)>>
+:[[SDL_RWclose]]
+:[[SDL_RWseek]]
+:[[SDL_RWwrite]]
 
 ----
 [[CategoryAPI]], [[CategoryIO]]
