--- a/SDL_WriteLE16.mediawiki
+++ b/SDL_WriteLE16.mediawiki
@@ -28,7 +28,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-SDL byteswaps the data only if necessary, so the application always specifies native format, and the data written will be in big-endian format.
+SDL byteswaps the data only if necessary, so the application always specifies native format, and the data written will be in little-endian format.
 
 == Related Functions ==
 :[[SDL_WriteBE16]]
