--- a/SDL_RWFromConstMem.mediawiki
+++ b/SDL_RWFromConstMem.mediawiki
@@ -43,7 +43,7 @@ This memory buffer is not copied by the RWops; the pointer you provide must rema
 If you need to write to a memory buffer, you should use [[SDL_RWFromMem]] with a writable buffer of memory instead.
 
 == Related Functions ==
-:[[SDL_RWFromMem]] *
+:[[SDL_RWFromMem]]
 :[[SDL_RWclose]]
 :[[SDL_RWread]]
 :[[SDL_RWseek]]
