--- a/SDL_GetThreadName.mediawiki
+++ b/SDL_GetThreadName.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_GetThreadName =
 Use this function to get the thread name as it was specified in [[SDL_CreateThread]]().
@@ -18,7 +17,7 @@ const char* SDL_GetThreadName(SDL_Thread* thread)
 |}
 
 == Return Value ==
-Returns a pointer to a UTF-8 string that names the specified thread, or NULL if it doesn't have a name,,; call [[SDL_GetError]]() for more information,,.
+Returns a pointer to a UTF-8 string that names the specified thread, or NULL if it doesn't have a name.
 
 == Code Examples ==
 ```c++
@@ -26,12 +25,11 @@ You can add your code example here
 ```
 
 == Remarks ==
-This is internal memory, not to be free()'d by the caller, and remains valid until the specified thread is cleaned up by [[SDL_WaitThread]]().
+This is internal memory, not to be freed by the caller, and remains valid until the specified thread is cleaned up by [[SDL_WaitThread]]().
 
 
 == Related Functions ==
 :[[SDL_CreateThread]]
-:[[SDL_WaitThread]]
 
 ----
 [[CategoryAPI]], [[CategoryThread]]
