--- a/SDL_RWFromMem.mediawiki
+++ b/SDL_RWFromMem.mediawiki
@@ -1,49 +1,49 @@
 <!-- pragma section-numbers off -->
-<!-- pragma camelcase off -->
-'''DRAFT'''
+<!-- pragma disable-camelcase -->
 
-= SDL_RWFromMem =
-Use this function to create an SDL_RWops structure from memory of a certain size.
+= SDL_RWFromConstMem =
+Use this function to prepare a read-only memory buffer for use with RWops.
 
 
 == Syntax ==
 ```c++
-SDL_RWops* SDL_RWFromMem(void* mem,
-                         int   size)
+SDL_RWops* SDL_RWFromConstMem(const void* mem,
+                              int         size)
 ```
 
 == Function Parameters ==
 {|
 |'''mem'''
-|,,a pointer to ,,^the memory location^
+|a pointer to a read-only buffer to feed an [[SDL_RWops]] stream
 |-
 |'''size'''
-|^the size of the memory location^
+|the buffer size, in bytes
 |}
 
-<<Color2(green,Is '''mem''' an exception to the 'pointer rule'?)>>
-
 == Return Value ==
-A pointer to the SDL_RWops structure that is created or NULL on failure; call [[SDL_GetError]]() for more information.
+Returns a pointer to a new [[SDL_RWops]] structure, or NULL if it fails; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
-*
 ```c++
 char bitmap[310000];
-SDL_RWops *rw;
-
-rw = SDL_RWFromMem(bitmap, sizeof(bitmap));
-SDL_SaveBMP_RW(screen, rw, 0);
+SDL_RWops *rw = SDL_RWFromMem(bitmap, sizeof(bitmap));
+SDL_SaveBMP_RW(screen, rw, 1);  /* closes RWOPS, leaves us memory buffer of data */
 ```
-*
 
 == Remarks ==
-*<br/>If the memory is not writable, use [[SDL_RWFromConstMem]]() instead.<br/>*
+This function sets up an [[SDL_RWops]] struct based on a memory area of a certain size, for both read and write access.
+
+This memory buffer is not copied by the RWops; the pointer you provide must remain valid until you close the stream. Closing the stream will not free the original buffer.
+
+If you need to make sure the RWops never writes to the memory buffer, you should use [[SDL_RWFromConstMem]] with a read-only buffer of memory instead.
 
 == Related Functions ==
-:[[SDL_RWFromConstMem]] ???
-:[[SDL_RWFromFile]] ???
-:[[SDL_RWFromFP]] ???
+:[[SDL_RWFromConstMem]]
+:[[SDL_RWclose]]
+:[[SDL_RWread]]
+:[[SDL_RWwrite]]
+:[[SDL_RWseek]]
+:[[SDL_RWtell]]
 
 ----
 [[CategoryAPI]], [[CategoryIO]]
