--- a/SDL_ThreadID.mediawiki
+++ b/SDL_ThreadID.mediawiki
@@ -1,9 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma camelcase off -->
-{|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
-|}
-
+<!-- pragma camelcase offnter;">DRAFT || -->
 
 = SDL_ThreadID =
 Use this function to get the thread identifier for the current thread.
@@ -14,7 +10,7 @@ Use this function to get the thread identifier for the current thread.
 SDL_threadID SDL_ThreadID(void)
 ```
 == Return Value ==
-Returns the ID of the current thread. This thread identifier is as  reported by the underlying operating system. If SDL is running on a  platform that does not support threads the return value will always be  zero.
+Returns the ID of the current thread.
 
 == Code Examples ==
 ```c++
@@ -25,10 +21,11 @@ SDL_threadID  threadID;
 threadID = SDL_ThreadID();
 ```
 == Remarks ==
-''You can add useful comments here''
+This thread identifier is as reported by the underlying operating system. If SDL is running on a platform that does not support threads the return value will always be zero.
+
+This function also returns a valid thread ID when called from the main thread.
 
 == Related Functions ==
-: [[SDL_CreateThread]] ???
 : [[SDL_GetThreadID]]
 
 ----
